--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,18 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <title>The Cobra Den | Mobile Security and Research</title>
+    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,300,700'
+          rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "all" %>
   </head>
-
-  <body class="<%= page_classes %>">
-    <%= yield %>
+  <body>
+    <%= partial 'partials/global_nav' %>
+    <div class="body-outer" role="main">
+      <%= yield %>
+    </div>
+    <%= partial 'partials/footer' %>
   </body>
 </html>
