JS tag in all pages

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cuprum:400,300,700'
           rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "all" %>
+    <%= javascript_include_tag "all" %>
   </head>
   <body>
     <%= partial 'partials/global_nav' %>
